[package]
name = "server"
version = "0.2.0"
authors = ["Sergey Lunev"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
lazy_static = "1.4"
regex = "1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
